# personal-website-rag

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  request.sh
.devcontainer/: devcontainer.json
app/: agent.py  main.py  models.py  utils.py
app/services/: llm.py  vectorstore.py
app/tools/: pinecone_tool.py
src/: data_loader.py
src/personal_website_rag/: __init__.py  __main__.py  app.py  data_loader.py  rag_chain.py
