[project]
name = "personal-website-rag"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sam Fareez", email = "vsefareez@gmail.com" }
]
dependencies = [
    "langchain>=0.3.18",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "gitpython>=3.1.44",
    "langchain-community>=0.3.17",
    "langchain-google-genai>=2.0.9",
    "faiss-cpu>=1.10.0",
    "fastapi[standard]>=0.115.8",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/personal_website_rag"]

[tool.rye.scripts]
dev = "fastapi dev src/personal_website_rag"
prod = { cmd = "fastapi run src/personal_website_rag", env = { "ENV" = "production" } }
load-data = "python src/personal_website_rag/data_loader.py"
